[gd_scene load_steps=12 format=2]

[ext_resource path="res://Platformer/sprite_free23.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Platformer/sprite_free26.png" type="Texture" id=3]
[ext_resource path="res://Platformer/sprite_free25.png" type="Texture" id=4]
[ext_resource path="res://Platformer/sprite_free24.png" type="Texture" id=5]
[ext_resource path="res://Platformer/sprite_free29.png" type="Texture" id=6]
[ext_resource path="res://Platformer/sprite_free33.png" type="Texture" id=7]
[ext_resource path="res://Platformer/sprite_free36.png" type="Texture" id=8]
[ext_resource path="res://Platformer/sprite_free29_dying.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.65501, 10.0151 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0.53249, -0.109871 )
z_index = 1
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15.1624, 5.50008 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -1000
limit_right = 704
limit_bottom = 180
smoothing_enabled = true
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.129
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
